--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node build/index.js",
+    "start": "node build/index.js",
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc --skipLibCheck"
   },
